--- a/index.ipynb
+++ b/index.ipynb
@@ -71,7 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "one_x_cubed = (1, 3)"
+    "one_x_cubed = (1, 3)\n"
    ]
   },
   {
@@ -81,6 +81,10 @@
    "outputs": [],
    "source": [
     "def find_term_derivative(term):\n",
+    "    a = term[1] \n",
+    "    b = term[0] * a \n",
+    "    c = a - 1 \n",
+    "    return [b,c]\n",
     "    pass"
    ]
   },
@@ -88,7 +92,18 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[3, 2]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "find_term_derivative(one_x_cubed) # (3, 2)"
    ]
@@ -102,11 +117,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[4, 1]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "two_x_squared = (2, 2)\n",
+    "\n",
     "find_term_derivative(two_x_squared) # (4, 1)"
    ]
   },
@@ -125,19 +152,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([12, 2], [-3, 0])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
+    "function_terms = ([4,3],[-3,1])\n",
+    "\n",
+    "\n",
+    "def filter_expo(in_terms):\n",
+    "    if in_terms[0][1] && in_terms[1][1] < 0:\n",
+    "        return True \n",
+    "    else:\n",
+    "        retrun False \n",
+    "    \n",
     "def find_derivative(function_terms):\n",
-    "    pass"
+    "    a = function_terms[0][0] * function_terms[0][1]\n",
+    "    b = function_terms[0][1] - 1\n",
+    "    c = function_terms[1][0] * function_terms[1][1]\n",
+    "    d = function_terms[1][1] -1 \n",
+    "  \n",
+    "    \n",
+    "    return ([a,b],[c,d])\n",
+    "find_derivative(function_terms)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([12, 2], [-3, 0])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "four_x_cubed_minus_three_x = [(4, 3), (-3, 1)]\n",
     "find_derivative(four_x_cubed_minus_three_x)  # [(12, 2), (-3, 0)]"
@@ -152,9 +217,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([6, 1], [0, -1])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "three_x_squared_minus_eleven = [(3, 2), (-11, 0)]\n",
     "find_derivative(three_x_squared_minus_eleven) # [(6, 1)]"
@@ -169,16 +245,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+       "        <script type=\"text/javascript\">\n",
+       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
+       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
+       "        if (typeof require !== 'undefined') {\n",
+       "        require.undef(\"plotly\");\n",
+       "        requirejs.config({\n",
+       "            paths: {\n",
+       "                'plotly': ['https://cdn.plot.ly/plotly-latest.min']\n",
+       "            }\n",
+       "        });\n",
+       "        require(['plotly'], function(Plotly) {\n",
+       "            window._Plotly = Plotly;\n",
+       "        });\n",
+       "        }\n",
+       "        </script>\n",
+       "        "
       ]
      },
      "metadata": {},
@@ -187,10 +275,22 @@
     {
      "data": {
       "text/html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
-      ],
-      "text/vnd.plotly.v1+html": [
-       "<script>requirejs.config({paths: { 'plotly': ['https://cdn.plot.ly/plotly-latest.min']},});if(!window.Plotly) {{require(['plotly'],function(plotly) {window.Plotly=plotly;});}}</script>"
+       "        <script type=\"text/javascript\">\n",
+       "        window.PlotlyConfig = {MathJaxConfig: 'local'};\n",
+       "        if (window.MathJax) {MathJax.Hub.Config({SVG: {font: \"STIX-Web\"}});}\n",
+       "        if (typeof require !== 'undefined') {\n",
+       "        require.undef(\"plotly\");\n",
+       "        requirejs.config({\n",
+       "            paths: {\n",
+       "                'plotly': ['https://cdn.plot.ly/plotly-latest.min']\n",
+       "            }\n",
+       "        });\n",
+       "        require(['plotly'], function(Plotly) {\n",
+       "            window._Plotly = Plotly;\n",
+       "        });\n",
+       "        }\n",
+       "        </script>\n",
+       "        "
       ]
      },
      "metadata": {},
@@ -201,9 +301,9 @@
     "# Feel free to use the output_at function in solving this\n",
     "\n",
     "# calculus.py\n",
-    "# def output_at(list_of_terms, x_value):\n",
-    "#     outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
-    "#     return sum(outputs)\n",
+    "def output_at(list_of_terms, x_value):\n",
+    "   outputs = list(map(lambda term: term_output(term, x_value), list_of_terms))\n",
+    "    return sum(outputs)\n",
     "\n",
     "from calculus import output_at\n",
     "\n",
@@ -213,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +548,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
